# EasyDeL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  WORKSPACE.md  format_and_generate_docs.py  pyproject.toml
benchmarks/: bench.py  (+18 more)
csrc/quantized_matmul/: CMakeLists.txt
csrc/quantized_matmul/src/: code_gen.py  qmm_cuda_impl.h  qmm_dequant_affine_bits1_bf16.cu  qmm_dequant_affine_bits2_bf16.cu  qmm_dequant_affine_bits2_f32.cu  qmm_dequant_affine_bits3_bf16.cu  qmm_dequant_affine_bits3_f16.cu  qmm_dequant_affine_bits4_bf16.cu  qmm_dequant_affine_bits5_f32.cu  qmm_dequant_affine_bits6_bf16.cu  qmm_dequant_affine_bits7_f16.cu  qmm_dequant_affine_bits8_bf16.cu  qmm_dequant_dispatch.h  qmm_dequant_nf4_f32.cu  qmm_dequant_nvfp4.cu
libs/spectrax/: .pre-commit-config.yaml  README.md  pyproject.toml
libs/spectrax/.github/workflows/: ci.yml
libs/spectrax/benchmarks/: __init__.py  bare_spmd.py  bench_mpmd_jit_llama8b.py  bench_mpmd_jit_vs_spmd.py  llama3_8b.py  models.py
libs/spectrax/benchmarks/cases/: graph_seam.py  rng.py
libs/spectrax/docs/: index.rst  quickstart.md
libs/spectrax/docs/api_docs/: _version.rst  api.rst  common_types.rst  lint.rst
libs/spectrax/docs/api_docs/_internal/: index.rst  logging.rst
libs/spectrax/docs/api_docs/contrib/: index.rst  optimizer.rst
libs/spectrax/docs/api_docs/core/: _weakcache.rst  containers.rst  context.rst  errors.rst  graph.rst  lazy_init.rst  module.rst  policy.rst  stage_assignment.rst  state.rst  static.rst
libs/spectrax/docs/api_docs/functional/: dropout.rst  linear.rst  util.rst
libs/spectrax/docs/api_docs/hooks/: index.rst
libs/spectrax/docs/api_docs/init/: normal.rst
libs/spectrax/docs/api_docs/inspect/: counting.rst  display.rst  index.rst  summary.rst  tabulate.rst  tree.rst
libs/spectrax/docs/api_docs/loggers/: console.rst  index.rst  tensorboard.rst  wandb.rst
libs/spectrax/docs/api_docs/nn/: activation.rst  attention.rst  dense.rst  fp8.rst  identity.rst  lora.rst  pipeline_sequential.rst
libs/spectrax/docs/api_docs/rng/: rngs.rst  seed.rst
libs/spectrax/docs/api_docs/serialization/: async_manager.rst  fsspec_utils.rst  index.rst
libs/spectrax/docs/api_docs/sharding/: index.rst  logical.rst  mesh.rst
libs/spectrax/docs/api_docs/transforms/: grad.rst  remat.rst  rng_axes.rst  scan.rst  vmap.rst
libs/spectrax/docs/guides/: lora.md  modules.md  pipeline.md  scope.md  selectors.md  sharding.md  transforms.md
libs/spectrax/examples/: README.md
libs/spectrax/examples/01_basics/: 01_module_and_forward.py  02_training_loop.py  05_optimizer.py  06_multi_optimizer_lora.py  README.md
libs/spectrax/examples/02_implementation_guide/: 01_llama3.py  02_qwen.py  03_gpt2.py  04_vit.py  06_llama_generation.py
libs/spectrax/examples/03_transformations/: 03_vmap.py
libs/spectrax/examples/04_surgery/: 01_selectors.py  03_fp8_cast.py  __init__.py
libs/spectrax/examples/05_shardings/: 01_fsdp.py  03_fsdp_tp_hybrid.py  README.md  __init__.py
libs/spectrax/examples/06_spmd_scheduled/: 01_bare_spmd_pipeline.py  03_1f1b.py  README.md  __init__.py
libs/spectrax/examples/07_mpmd/: 01_train_homogeneous.py  02_inference_forward.py  07_fused_tasks.py  08_pp_stage_assignment.py  09_dualpipev_tasks.py  README.md
libs/spectrax/examples/models/: __init__.py
libs/spectrax/spectrax/: __init__.py  _version.py  api.py
libs/spectrax/spectrax/_internal/: logging.py
libs/spectrax/spectrax/contrib/: __init__.py  optimizer.py
libs/spectrax/spectrax/core/: __init__.py  containers.py  lazy_init.py  module.py  paths.py  registry.py  selector.py  sharding.py  state.py  static.py  variable.py
libs/spectrax/spectrax/functional/: __init__.py  dropout.py  norm.py
libs/spectrax/spectrax/init/: __init__.py  constant.py  kaiming.py  normal.py  orthogonal.py  uniform.py  xavier.py
libs/spectrax/spectrax/inspect/: summary.py  tabulate.py
libs/spectrax/spectrax/loggers/: __init__.py
libs/spectrax/spectrax/nn/: __init__.py  activation.py  dropout.py  fp8.py  linear.py  lora.py  mlp.py  pipeline_sequential.py  pool.py  recurrent.py
libs/spectrax/spectrax/rng/: seed.py
libs/spectrax/spectrax/runtime/mpmd/: compiler.py  grad_core.py  markers.py  profiling.py  runtime.py  schedule_types.py  stage_callables.py  training_step.py
libs/spectrax/spectrax/runtime/primitives/: boundary.py
libs/spectrax/spectrax/serialization/: __init__.py  _compat.py  _fs.py  checkpointer.py  serialization.py
libs/spectrax/spectrax/sharding/: logical.py  mesh.py  partition.py
libs/spectrax/spectrax/transforms/: __init__.py  jit.py  remat.py  scan.py  vmap.py
libs/spectrax/tests/: test_conformance.py  test_smoke.py
libs/spectrax/tests/contrib/: test_optimizer.py
libs/spectrax/tests/core/: __init__.py  test_flat_state.py  test_freeze.py  test_graph_iter.py  test_module_hashing.py  test_module_pytree.py  test_paths.py  test_registry.py  test_selector.py  test_selector_combinators.py  test_selector_types.py  test_sharding.py  test_state.py  test_static.py  test_variable.py
libs/spectrax/tests/functional/: test_attention.py  test_conv.py  test_linear.py
libs/spectrax/tests/init/: test_normal.py  test_uniform.py
libs/spectrax/tests/inspect/: test_repr.py  test_tabulate.py
libs/spectrax/tests/loggers/: test_loggers.py
libs/spectrax/tests/nn/: test_activation.py  test_attention.py  test_conv.py  test_dense_general.py  test_dropout.py  test_fp8.py  test_identity.py  test_lora.py  test_mlp.py
libs/spectrax/tests/pipeline/: __init__.py  conftest.py  test_auto_split_stage_assignment.py  test_e2e.py  test_hybrid.py  test_mpmd.py  test_mpmd_abi_fuzz.py  test_mpmd_regressions.py  test_per_rank.py  test_pscan_mpmd.py  test_stage_region.py
libs/spectrax/tests/runtime/: test_mpmd_pipeline_executor.py
libs/spectrax/tests/serialization/: test_async_manager.py  test_fs.py  test_serialization.py
libs/spectrax/tests/sharding/: __init__.py  conftest.py
libs/spectrax/tests/transforms/: _dynamic_helpers.py  test_dynamic_matrix.py  test_eval_shape.py  test_rng_axes.py
(+2162 files in other folders)
