[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easydel-foundation"
version = "0.1.0"
description = "EasyDeL foundation workspace: easydel + spectrax + ejkernel + eformer developed in one repo"
requires-python = ">=3.11,<3.14"
dependencies = ["easydel"]

# Root extras forward to the easydel member so the whole foundation installs with
# one selector, e.g. `uv sync --extra tpu --extra dev` (workspace-aware: the
# four packages come editable from libs/). Note: the pip-style
# `uv pip install -e .[tpu]` also works but resolves easydel & friends from
# PyPI, NOT from libs/ — use `uv sync` for development environments.
[project.optional-dependencies]
torch = ["easydel[torch]"]
cuda = ["easydel[cuda]"]
tpu = ["easydel[tpu]"]
tensorflow = ["easydel[tensorflow]"]
lm-eval = ["easydel[lm_eval]"]
profile = ["easydel[profile]"]
podutils = ["easydel[podutils]"]
mm = ["easydel[mm]"]
dev = ["import-linter>=2.0", "ruff", "pytest", "pre-commit", "basedpyright"]

[dependency-groups]
dev = ["import-linter>=2.0", "ruff", "pytest", "pre-commit", "basedpyright"]
torch = ["easydel[torch]"]
cuda = ["easydel[cuda]"]
tpu = ["easydel[tpu]"]
tensorflow = ["easydel[tensorflow]"]
lm-eval = ["easydel[lm_eval]"]
profile = ["easydel[profile]"]
podutils = ["easydel[podutils]"]
mm = ["easydel[mm]"]

# The root wheel is an empty meta-package: it exists so `-e .` style installs
# have a build backend (legacy setuptools chokes on the flat repo layout).
[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv]
prerelease = "if-necessary-or-explicit"
conflicts = [
    [
        { group = "cuda" },
        { group = "tpu" },
    ],
    [
        { group = "cuda" },
        { group = "torch" },
    ],
    [
        { group = "profile" },
        { group = "tensorflow" },
    ],
    [
        { extra = "cuda" },
        { extra = "tpu" },
    ],
    [
        { extra = "cuda" },
        { extra = "torch" },
    ],
    [
        { extra = "profile" },
        { extra = "tensorflow" },
    ],
]

[tool.uv.workspace]
members = ["libs/easydel", "libs/spectrax", "libs/ejkernel", "libs/eformer"]

[tool.uv.sources]
easydel = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# Layering contract for the workspace: easydel sits on top of the three
# foundation libraries; the foundation libraries must stay independent of
# easydel AND of each other (ejkernel's eformer dep is a dev/test extra only).
# Enforced in CI via `lint-imports`.
[tool.importlinter]
root_packages = ["easydel", "spectrax", "ejkernel", "eformer"]

[[tool.importlinter.contracts]]
name = "foundation libs must not import easydel"
type = "forbidden"
source_modules = ["spectrax", "ejkernel", "eformer"]
forbidden_modules = ["easydel"]

[[tool.importlinter.contracts]]
name = "foundation libs stay independent of each other"
type = "independence"
modules = ["spectrax", "ejkernel", "eformer"]

[tool.black]
line-length = 121
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py311"
